--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,15 @@
-[submodule ".vim/vendor/cocoa.vim"]
-	path = .vim/vendor/cocoa.vim
-	url = git@github.com:baz/cocoa.vim.git
-[submodule ".vim/vendor/vcscommand"]
-	path = .vim/vendor/vcscommand
-	url = git://repo.or.cz/vcscommand
 [submodule ".vim/vendor/Command-T"]
 	path = .vim/vendor/Command-T
+	url = http://github.com/wincent/Command-T.git
+[submodule ".vim/bundle/cocoa.vim"]
+	path = .vim/bundle/cocoa.vim
+	url = git@github.com:baz/cocoa.vim.git
+[submodule ".vim/bundle/fugitive"]
+	path = .vim/bundle/fugitive
+	url = http://github.com/tpope/vim-fugitive.git
+[submodule ".vim/bundle/snipmate"]
+	path = .vim/bundle/snipmate
+	url = http://github.com/msanders/snipmate.vim.git
+[submodule ".vim/bundle/command-t"]
+	path = .vim/bundle/command-t
 	url = http://github.com/wincent/Command-T.git
