--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule ".vim/bundle/command-t"]
 	path = .vim/bundle/command-t
 	url = http://github.com/wincent/Command-T.git
+[submodule ".vim/pathogen"]
+	path = .vim/pathogen
+	url = http://github.com/tpope/vim-pathogen.git
