--- a/.gitmodules
+++ b/.gitmodules
@@ -7,12 +7,12 @@
 [submodule ".vim/bundle/fugitive"]
 	path = .vim/bundle/fugitive
 	url = http://github.com/tpope/vim-fugitive.git
-[submodule ".vim/bundle/snipmate"]
-	path = .vim/bundle/snipmate
-	url = http://github.com/msanders/snipmate.vim.git
 [submodule ".vim/bundle/command-t"]
 	path = .vim/bundle/command-t
 	url = http://github.com/wincent/Command-T.git
 [submodule ".vim/pathogen"]
 	path = .vim/pathogen
 	url = http://github.com/tpope/vim-pathogen.git
+[submodule ".vim/bundle/snipmate"]
+	path = .vim/bundle/snipmate
+	url = git@github.com:baz/snipmate.vim.git
